added links in my html

--- a/index.html
+++ b/index.html
@@ -47,9 +47,18 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Michelle M</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/michie-web" target="_blank">Michelle M</a>
+          and is
+          <a
+            href="https://github.com/michie-web/the-weather-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://silly-duckanoo-e08a77.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
